Adding groups create/edit/replicate

--- a/amadeus/static/css/base/amadeus.css
+++ b/amadeus/static/css/base/amadeus.css
@@ -73,7 +73,7 @@ a:focus {
 /* side bar menu ends*/
 
 /* category app starts */
-.category-panel > .panel-heading, .subject-panel > .panel-heading, .special-panel > .panel-heading, .topic-panel > .panel-heading {
+.category-panel > .panel-heading, .subject-panel > .panel-heading, .special-panel > .panel-heading, .topic-panel > .panel-heading, .group-panel > .panel-heading {
     padding: 2px 0px;
 }
 
