Adding group delete

--- a/amadeus/static/css/themes/green.css
+++ b/amadeus/static/css/themes/green.css
@@ -67,6 +67,11 @@ a, a:focus, a:hover {
     color: #000000 !important;
 }
 
+.group-panel-body {
+    background: #FFFFFF !important;
+    border-top: 1px solid #CCCCCC;
+}
+
 .topic-panel > .panel-heading {
     background-color: #7BA5B9 !important;
 }
