--- a/students_group/templates/groups/index.html
+++ b/students_group/templates/groups/index.html
@@ -33,15 +33,15 @@
     </div>
 
     <div class="col-md-12 cards-content">
-        <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+        <div class="panel-group" id="group-accordion" role="tablist" aria-multiselectable="true">
             {% for group in groups  %}
             	<div class="panel panel-info group-panel">
                     <div class="panel-heading">
                         <div class="row">
                             <div class="col-md-12 category-header">
                                 <h4 class="panel-title">
-                                    <a class="category-course-link pull-left" data-parent="#accordion" data-toggle="collapse" href="#{{group.slug}}">
-                                        <button class="btn btn-default btn-xs text-center cat-selector"><i class="fa fa-angle-right fa-2x" aria-hidden="true"></i></button> {{ group }}
+                                    <a class="category-course-link pull-left" data-parent="#group-accordion" data-toggle="collapse" href="#{{group.slug}}">
+                                        <button class="btn btn-default btn-xs text-center cat-selector"><i class="fa fa-angle-right fa-2x" aria-hidden="true"></i></button> {{ group }} ({{ group.participants.count }})
                                     </a>
                                 </h4>
 
@@ -56,18 +56,34 @@
                                             </a>
                                         </li>
                                         <li><a href="{% url 'groups:update' subject.slug group.slug %}"><i class="fa fa-pencil fa-fw" aria-hidden="true"></i> {% trans 'Edit' %}</a></li>
-                                        <li><a href=""><i class="fa fa-trash fa-fw" aria-hidden="true"></i> {% trans 'Remove' %}</a></li>
+                                        <li><a href="javascript:delete_group('{% url 'groups:delete' group.slug %}')"><i class="fa fa-trash fa-fw" aria-hidden="true"></i> {% trans 'Remove' %}</a></li>
                                     </ul>
                                 </div>
                             </div>
                         </div>
                     </div>
-                </div>
+                    <div id="{{ group.slug }}" class="panel-collapse panel-body collapse category-panel-content group-panel-body">
+                        {% autoescape off %}
+                            {{ group.description }}
+                        {% endautoescape %}
 
+                        <h3>{% trans 'Participant(s)' %}: </h3>
+                        
+                        <ul class="list-inline">
+                            {% for user in group.participants.all %}
+                                <li class="list-inline-item text-center col-lg-2 col-md-2 col-sm-2 col-xs-3">
+                                    <img src="{{ user.image_url }}" class="img-responsive" />
+                                    <p><small>{{ user }}</small></p>
+                                </li>
+                            {% endfor %}
+                        </ul>
+                    </div>
+                </div>
             {% endfor %}
 
             {% pagination request paginator page_obj %}
         </div>
     </div>
 
+    <script type="text/javascript" src="{% static 'js/course.js' %}"></script>
 {% endblock %}
