Adding subjects total number to home

--- a/subjects/templates/subjects/initial.html
+++ b/subjects/templates/subjects/initial.html
@@ -26,7 +26,7 @@
 	</div>
 	
 	<div class="col-md-12 cards-content">
-		<h2 class=" my-subjects-title"><b><i>{% trans "Meus Assuntos" %}</i></b></h2>
+		<h2 class=" my-subjects-title"><b><i>{% trans "Meus Assuntos" %} ({{ total_subs }})</i></b></h2>
 
 		{% if subjects|length > 0 %}
 	    	<div class="panel-group" id="subject-accordion" role="tablist" aria-multiselectable="true">
