fixed minor issues with this release, but still have work to do on search subjects

--- a/subjects/templates/subjects/create.html
+++ b/subjects/templates/subjects/create.html
@@ -18,7 +18,7 @@
 
    	{% if subject %}
    		{% breadcrumb subject.category 'subjects:cat_view' subject.category.slug %}
-   		{% breadcrumb subject 'subjects:view' subject.slug %}
+   		{% breadcrumb subject 'subjects:view' subject.name %}
 
    		{% trans 'Replicate: ' as bread %}
 
