--- a/subjects/templates/subjects/subscribe.html
+++ b/subjects/templates/subjects/subscribe.html
@@ -7,7 +7,7 @@
       <!-- Modal Header -->
       <div class="modal-header">
 
-        <h4 class="modal-title" id="myModalLabel">{% trans "Delete Subject" %}</h4>
+        <h4 class="modal-title" id="myModalLabel">{% trans "Subscribe To Subject" %}</h4>
       </div>
       <!-- Modal Body -->
       <div class="modal-body">
