subscribe modal and delete ones, now work

--- a/subjects/templates/subjects/list_search.html
+++ b/subjects/templates/subjects/list_search.html
@@ -56,6 +56,11 @@
 		{% endif %}
 	</div>
 
+	<div id="modal_course">
+    </div>
 
+    <div id="modal_subject"></div>
+    
+    <script type="text/javascript" src="{% static 'js/course.js' %}"></script>
 	
 {% endblock content %}
