--- a/subjects/templates/subjects/list_search.html
+++ b/subjects/templates/subjects/list_search.html
@@ -40,6 +40,8 @@
         </ul>
     </div>
 
+    <p id="search-results-title">{% trans "Search results" %}:</p>
+
     <div class="col-md-12 cards-content">
 		
 
