--- a/webpage/templates/webpages/view.html
+++ b/webpage/templates/webpages/view.html
@@ -1,4 +1,4 @@
-{% extends 'categories/home.html' %}
+{% extends 'subjects/view.html' %}
 
 {% load static i18n pagination permissions_tags %}
 {% load django_bootstrap_breadcrumbs %}
@@ -9,8 +9,8 @@
 
 {% block breadcrumbs %}
     {{ block.super }}
-    {% breadcrumb subject.category 'subjects:cat_view' subject.category.slug %}
-    {% breadcrumb subject 'subjects:view' subject.slug %}
+    {% breadcrumb topic 'subjects:view' subject.slug %}
+    {% breadcrumb webpage 'webpages:view' webpage.slug %}
 {% endblock %}
 
 {% block content %}
@@ -27,14 +27,14 @@
 
     {% subject_permissions request.user subject as has_subject_permissions %}
 
-	{% if subject.visible %}
+    {% if subject.visible %}
 		<div class="panel panel-info subject-panel">
         	<div class="panel-heading">
 	{% elif has_subject_permissions %}
 		<div class="panel panel-info subject-panel-invisible">
         	<div class="panel-heading panel-invisible">
     {% endif %}
-            <div class="row">
+    		<div class="row">
                 <div class="col-md-12 category-header">
                     <h4 class="panel-title" style="margin-top: 10px; margin-bottom: 8px">
                         <span>{{subject.name}}</span>
@@ -61,37 +61,6 @@
             </div>
         </div>
         <div id="{{subject.slug}}" class="panel-collapse in collapse category-panel-content">
-            <div class="row">
-                <div class="col-md-6">
-                    {% if subject.professor.all|length > 0  %}
-                        <h4><b>{% trans "Professor(s) " %}: </b>
-                            {{ subject.professor.all|join:', ' }}
-                        </h4>
-                    {% else %}
-                        <h4> {% trans "It doesn't possess professors" %} </h4>
-                    {% endif %}
-                </div>
-                <div class="col-xs-6 col-md-3">
-                    <p><b>{% trans "Beginning" %}:</b> {{subject.init_date}}</p>
-                </div>
-                <div class="col-xs-6 col-md-3">
-                    <p><b>{% trans "End" %}:</b> {{subject.end_date}}</p>
-                </div>
-            </div>
-
-            <p>{{subject.description|safe}}</p>
-
-            {% if has_subject_permissions %}
-                <a href="{% url 'topics:create' subject.slug %}" class="btn btn-sm btn-success btn-raised btn-block">{% trans "Create new topic" %}</a>
-            {% endif %}
-            
-            {% include 'topics/list.html' with subject=subject %}
+        	{{ webpage.content }}
         </div>
-    </div>
-
-    <script type="text/javascript">
-        {% if resource_new_page %}
-            window.open("{{ resource_new_page_url }}");
-        {% endif %}
-    </script>
-{% endblock content %}
+{% endblock %}
